[tool.poetry]
name = "sandbox-poetry"
version = "0.1.0"
description = ""
authors = ["okmtz <yuto430scuderia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
